src/objects/CT_Access_Credentials__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Access Creds for Campaign Tracker Access</description>
    <fields>
        <fullName>Basic_Token__c</fullName>
        <inlineHelpText>For use where Basic Auth is available</inlineHelpText>
        <label>Basic Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_URI__c</fullName>
        <label>Default URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnonce__c</fullName>
        <label>cnonce</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nc__c</fullName>
        <label>nc</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nonce__c</fullName>
        <label>nonce</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qop__c</fullName>
        <label>qop</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>realm__c</fullName>
        <label>Realm</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>CT Access Credentials</label>
</CustomObject>